--- a/src/style.scss
+++ b/src/style.scss
@@ -61,6 +61,7 @@ table {
     }
     &__content-wraper {
         margin: 20px 15px 0;
+        padding-bottom: 20px;
     }
     &__content {
         margin: 0 auto;
