--- a/src/components/Color/Box/style.scss
+++ b/src/components/Color/Box/style.scss
@@ -1,26 +1,23 @@
 .Box {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border: 1px solid #eaeaea;
     border-radius: 5px;
     box-shadow: 0 3px 7px 0 rgba(110,142,247,.13);
     box-sizing: border-box;
     position: relative;
+    transition: all 0.2s ease;
+    &:hover {
+        box-shadow: 0 3px 15px 0 rgba(110,142,247,.53);
+    }
     &__color {
         width: 100%;
-        height: 70px;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
+        height: 100%;
+        border-radius: 5px;
         display: flex;
         justify-content: center;
         align-items: center;
         color: white;
         font-size: 14px;
-    }
-    &__title {
-        font-size: 13px;
-        line-height: 30px;
-        text-align: center;
-        font-weight: 700;
     }
 }
